feat: get event purchased by costumer